Was added Dictionary

--- a/DISC/Views/Dictionary/Dictionary.cshtml
+++ b/DISC/Views/Dictionary/Dictionary.cshtml
@@ -1,1 +1,74 @@
-﻿<h1>Dictionary</h1>
+﻿<div class="container">
+    <h2>Словарь</h2>
+    <br />
+    <h4><strong>Авантюра</strong> (<a href="https://ru.wikipedia.org/wiki/%D0%A4%D1%80%D0%B0%D0%BD%D1%86%D1%83%D0%B7%D1%81%D0%BA%D0%B8%D0%B9_%D1%8F%D0%B7%D1%8B%D0%BA" target="_blank">фр</a>.aventure – приключение) – рискованное и сомнительное дело, предпринятое в надежде на 
+        <a href="https://ru.wikipedia.org/wiki/%D0%A1%D0%BB%D1%83%D1%87%D0%B0%D0%B9%D0%BD%D0%BE%D1%81%D1%82%D1%8C" target="_blank">случайный</a> успех, 
+        <a href="https://ru.wikipedia.org/wiki/%D0%9F%D1%80%D0%B8%D0%BA%D0%BB%D1%8E%D1%87%D0%B5%D0%BD%D0%B8%D0%B5" target="_blank">приключение</a>, опасное по своей природе, сопровождаемое риском неожиданных событий, перипетий и скачков; беспринципное, сомнительное по своей 
+        <a href="https://ru.wikipedia.org/wiki/%D0%A7%D0%B5%D1%81%D1%82%D0%BD%D0%BE%D1%81%D1%82%D1%8C" target="_blank">честности</a> дело; имеет отношение к 
+        <a href="https://ru.wikipedia.org/wiki/%D0%9B%D0%BE%D0%B6%D1%8C" target="_blank">обману</a> или 
+        <a href="https://ru.wikipedia.org/wiki/%D0%A1%D1%83%D0%BF%D1%80%D1%83%D0%B6%D0%B5%D1%81%D0%BA%D0%B0%D1%8F_%D0%B8%D0%B7%D0%BC%D0%B5%D0%BD%D0%B0" target="_blank">супружеской измене</a> (чем отличается от обычного приключения).</h4>
+    <br />
+    <h4><strong>Авантюрный</strong> – рискованный и сомнительный.</h4>
+    <br />
+    <h4><strong>Акро́ним</strong> (от <a href="https://ru.wikipedia.org/wiki/%D0%93%D1%80%D0%B5%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B9_%D1%8F%D0%B7%D1%8B%D0%BA" target="_blank">греч.</a> Άκρος) – «высший, крайний» и όνυμος –«имя») – 
+        <a href="https://ru.wikipedia.org/wiki/%D0%90%D0%B1%D0%B1%D1%80%D0%B5%D0%B2%D0%B8%D0%B0%D1%82%D1%83%D1%80%D0%B0" target="_blank">аббревиатура,</a> образованная из начальных букв слов или словосочетаний, произносимая как единое слово, а не побуквенно.</h4>
+    <br />
+    <h4><strong>Антагонизм</strong> (греч. antagonismos) – соперничество, взаимная борьба интересов. Враждебное противодействие, вызванное несогласием во мнениях или интересах (разг.).</h4>
+    <br />
+    <h4><strong>Бдительный</strong> – внимательный, настороженный.</h4>
+    <br />
+    <h4><strong>Беспристрастный</strong> – справедливый 1. Совершающий что-либо без предвзятости, предубеждения. 2. Основанный на отсутствии пристрастия, предвзятости, предубеждения.</h4>
+    <br />
+    <h4><strong>Деспоти́зм</strong> (от др.-греч. δεσποτία) – неограниченная власть.</h4>
+    <br />
+    <h4><strong>Де́спот</strong> (от <a href="https://ru.wikipedia.org/wiki/%D0%94%D1%80%D0%B5%D0%B2%D0%BD%D0%B5%D0%B3%D1%80%D0%B5%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B9_%D1%8F%D0%B7%D1%8B%D0%BA" target="_blank">др.-греч.</a> δεσπότης – господин) – полновластный правитель (не путать с жестоким правителем – 
+        <a href="https://ru.wikipedia.org/wiki/%D0%A2%D0%B8%D1%80%D0%B0%D0%BD%D0%B8%D1%8F" target="_blank">тираном</a>), не считающийся с волей и желаниями других; самовластный.(Хотя во многом – это синонимы, оба слова имеют негативный характер).</h4>
+    <br />
+    <h4><strong>Доминирующий</strong> – преобладающий, превосходящий других в чём-либо.</h4>
+    <br />
+    <h4><strong>Деликатный</strong> (фр. delicat) –- 1) чуткий, вежливый, мягкий в обращении; 2) нежный, слабый, хрупкий (о телосложении); 3) требующий осторожного, тактичного обращения, затруднительный, щекотливый.</h4>
+    <br />
+    <h4><strong>Игривый</strong> – веселый, шутливый, юморной.</h4>
+    <br />
+    <h4><strong>нтроспективный</strong> (от лат. introspecto – смотрю внутрь), – человек занимающийся самоанализом, самонаблюдением, самоуглублением.</h4>
+    <br />
+    <h4><strong>Интроверт</strong> (психол.) человек, психический склад которого характеризуется сосредоточенностью на своем внутреннем мире, замкнутостью, созерцательностью. Это люди, сдержанные и замкнутые, предпочитающие одного – двух друзей шумной компании, глубоко погруженные в свой внутренний мир, который, как правило, богат.</h4>
+    <br />
+    <h4><strong>Импульсивный</strong> – склонный действовать под влиянием внезапного порыва, <a href="https://ru.wiktionary.org/wiki/%D0%B8%D0%BC%D0%BF%D1%83%D0%BB%D1%8C%D1%81" target="_blank">импульса.</a></h4>
+    <br />
+    <h4><strong>Конформность</strong> (психол.) (от позднелат. conformis – подобный, сообразный) согласие с группой, коллективом; зависимость человека от общественного мнения; склонность подчиняться, следовать нормам, установленным в группе или обществе.</h4>
+    <br />
+    <h4><strong>Лоя́льный</strong> (франц. lоуаl) – доступный, милосердный, человечный, человеколюбивый, приветливый, благородный и правдивый, доброжелательный; (лат. lēgālis «законный») – держащийся формально в пределах законности, в пределах нейтрально-благожелательного отношения к кому-л., чему-л. Человек, который ведет себя по отношению к другому человеку таким образом, что не нарушает интересы этого другого человека, т.е. независимо от эмоций, ведет себя корректно.</h4>
+    <br />
+    <h4><strong>Маргинальность</strong> (лат. marginalis – расположенный у края, на границе) – 1. Положение индивида или группы на границе двух культур. 2. Состояние индивида или группы, отвергающих традиции той культуры, в которой они возникают, и утверждающих свою собственную систему норм и ценностей.</h4>
+    <br />
+    <h4><strong>Мужественный</strong> – стойкий, энергичный, храбрый.</h4>
+    <br />
+    <h4><strong>Незаурядный</strong> – <a href="https://tolkslovar.ru/v8047.html" target="_blank">выдающийся,</a> выделяющийся среди других.</h4>
+    <br />
+    <h4><strong>Непоколебимый</strong> – непреклонный, стойкий.</h4>
+    <br />
+    <h4><strong>Перфекционист</strong> (англ. perfect), совершенство, человек, стремящийся к совершенству. Перфекционизм – это стремление к совершенству.</h4>
+    <br />
+    <h4><strong>Привлекательный</strong> – способный притягивать к себе позитивное внимание, вызывать интерес, радость и желание повторить контакт.</h4>
+    <br />
+    <h4><strong>Притяга́тельный</strong> – притягивающий, влекущий, заключающий в себе то, что возбуждает интерес, желание, надежду.</h4>
+    <br />
+    <h4><strong>Прямой</strong> – откровенный, правдивый, не таящий правды.</h4>
+    <br />
+    <h4><strong>Статус-Кво</strong> – (от лат. status quo определенное состояние, положение). Положение, существующее или существовавшее на определенный момент; политическое, правовое или иное положение, о сохранении или восстановлении которого идет речь.</h4>
+    <br />
+    <h4><strong>Тенденции</strong> (от лат. tendere – направляться, стремиться к чему-нибудь) - направление, в котором совершается развитие какого-либо явления, намерение. Направленность во взглядах или действия, стремления, намерения, свойственные кому-либо, чему-либо. Предрасположение, склонность к чему-либо, кому-либо. Тенденции (напр. встр. 19 раз) также закономерная, общая, обычная.</h4>
+    <br />
+    <h4><strong>Удовлетворенный</strong> – вполне довольный, испытывающий чувство удовлетворения от чего-нибудь.</h4>
+    <br />
+    <h4><strong>Эгоцентри́зм</strong> (от ego «я», «центр круга») — неспособность или неумение индивида встать на чужую точку зрения. Восприятие своей точки зрения как единственной существующей.</h4>
+    <br />
+    <h4><strong>Энтузиаст</strong> (гр. Enthusiastes) – человек, горячо преданный делу, отдающий ему все силы, работающий с энтузиазмом.</h4>
+    <br />
+    <h4><strong>Экстраверт</strong> (психол.) человек, психический склад которого характеризуется преимущественной обращённостью к объектам внешнего мира. Это люди, ориентированные на окружающий мир, непосредственные, открытые в эмоциональных проявлениях, любящие движение и риск.</h4>
+    <br />
+    <h4><strong>Эмпа́тия</strong> (от греч. empatheia), сопереживание, проникновение в чувства и переживания другого человека, переживание тех же эмоциональных состояний, которые испытывает другой, т.е. это способность понимать переживания другого человека и сопереживать их. Это обязательный компонент коммуникативных способностей, элемент полноценного общения.</h4>
+    <br />
+    <h4><strong>Энтузиаст</strong> – увлеченный чем-либо, сторонник, фанат.</h4>
+</div>
