--- a/DISC/Views/SecondPart/Quiz.cshtml
+++ b/DISC/Views/SecondPart/Quiz.cshtml
@@ -19,123 +19,125 @@
 
     @foreach (var item in Model.SecondPart)
     {
-        <table class="table table-bordered">
-            <thead>
-                <tr>
-                    <th scope="col">Вопрос @item.Id (@quizzesAmmount) </th>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row">@item.QuestionFirst</th>
-                    <td>
-                        <input type="radio" name="a1" id="a22" required>
-                        <label for="a22">Согласен</label>
-                    </td>
-                    <td>
-                        <input type="radio" name="a1" id="a23" required>
-                        <label for="a23">Не согласен</label>
-                    </td>
-                    <td>
-                        <input type="radio" name="a1" id="a24" required>
-                        <label for="a24">Не знаю</label>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">@item.QuestionSecond</th>
-                    <td>
-                        <input type="radio" name="a2" id="a25" required>
-                        <label for="a25">Согласен</label>
-                    </td>
-                    <td>
-                        <input type="radio" name="a2" id="a26" required>
-                        <label for="a26">Не согласен</label>
-                    </td>
-                    <td>
-                        <input type="radio" name="a2" id="a27" required>
-                        <label for="a27">Не знаю</label>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">@item.QuestionThird</th>
-                    <td>
-                        <input type="radio" name="a3" id="a19" required>
-                        <label for="a19">Согласен</label>
-                    </td>
-                    <td>
-                        <input type="radio" name="a3" id="a20" required>
-                        <label for="a20">Не согласен</label>
-                    </td>
-                    <td>
-                        <input type="radio" name="a3" id="a21" required>
-                        <label for="a21">Не знаю</label>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">@item.QuestionFourth</th>
-                    <td>
-                        <input type="radio" name="a4" id="a16" required>
-                        <label for="a16">Согласен</label>
-                    </td>
-                    <td>
-                        <input type="radio" name="a4" id="a17" required>
-                        <label for="a17">Не согласен</label>
-                    </td>
-                    <td>
-                        <input type="radio" name="a4" id="a18" required>
-                        <label for="a18">Не знаю</label>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">@item.QuestionFifth</th>
-                    <td>
-                        <input type="radio" name="a5" id="a13" required>
-                        <label for="a13">Согласен</label>
-                    </td>
-                    <td>
-                        <input type="radio" name="a5" id="a14" required>
-                        <label for="a14">Не согласен</label>
-                    </td>
-                    <td>
-                        <input type="radio" name="a5" id="a15" required>
-                        <label for="a15">Не знаю</label>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">@item.QuestionSixth</th>
-                    <td>
-                        <input type="radio" name="a6" id="a10" required>
-                        <label for="a10">Согласен</label>
-                    </td>
-                    <td>
-                        <input type="radio" name="a6" id="a11" required>
-                        <label for="a11">Не согласен</label>
-                    </td>
-                    <td>
-                        <input type="radio" name="a6" id="a12" required>
-                        <label for="a12">Не знаю</label>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">@item.QuestionSeventh</th>
-                    <td>
-                        <input type="radio" name="a7" id="a7" required>
-                        <label for="a7">Согласен</label>
-                    </td>
-                    <td>
-                        <input type="radio" name="a7" id="a8" required>
-                        <label for="a8">Не согласен</label>
-                    </td>
-                    <td>
-                        <input type="radio" name="a7" id="a9" required>
-                        <label for="a9">Не знаю</label>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <form>
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th scope="col">Вопрос @item.Id (@quizzesAmmount) </th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">@item.QuestionFirst</th>
+                        <td>
+                            <input type="radio" name="a1" id="a22" required>
+                            <label for="a22">Согласен</label>
+                        </td>
+                        <td>
+                            <input type="radio" name="a1" id="a23" required>
+                            <label for="a23">Не согласен</label>
+                        </td>
+                        <td>
+                            <input type="radio" name="a1" id="a24" required>
+                            <label for="a24">Не знаю</label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">@item.QuestionSecond</th>
+                        <td>
+                            <input type="radio" name="a2" id="a25" required>
+                            <label for="a25">Согласен</label>
+                        </td>
+                        <td>
+                            <input type="radio" name="a2" id="a26" required>
+                            <label for="a26">Не согласен</label>
+                        </td>
+                        <td>
+                            <input type="radio" name="a2" id="a27" required>
+                            <label for="a27">Не знаю</label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">@item.QuestionThird</th>
+                        <td>
+                            <input type="radio" name="a3" id="a19" required>
+                            <label for="a19">Согласен</label>
+                        </td>
+                        <td>
+                            <input type="radio" name="a3" id="a20" required>
+                            <label for="a20">Не согласен</label>
+                        </td>
+                        <td>
+                            <input type="radio" name="a3" id="a21" required>
+                            <label for="a21">Не знаю</label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">@item.QuestionFourth</th>
+                        <td>
+                            <input type="radio" name="a4" id="a16" required>
+                            <label for="a16">Согласен</label>
+                        </td>
+                        <td>
+                            <input type="radio" name="a4" id="a17" required>
+                            <label for="a17">Не согласен</label>
+                        </td>
+                        <td>
+                            <input type="radio" name="a4" id="a18" required>
+                            <label for="a18">Не знаю</label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">@item.QuestionFifth</th>
+                        <td>
+                            <input type="radio" name="a5" id="a13" required>
+                            <label for="a13">Согласен</label>
+                        </td>
+                        <td>
+                            <input type="radio" name="a5" id="a14" required>
+                            <label for="a14">Не согласен</label>
+                        </td>
+                        <td>
+                            <input type="radio" name="a5" id="a15" required>
+                            <label for="a15">Не знаю</label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">@item.QuestionSixth</th>
+                        <td>
+                            <input type="radio" name="a6" id="a10" required>
+                            <label for="a10">Согласен</label>
+                        </td>
+                        <td>
+                            <input type="radio" name="a6" id="a11" required>
+                            <label for="a11">Не согласен</label>
+                        </td>
+                        <td>
+                            <input type="radio" name="a6" id="a12" required>
+                            <label for="a12">Не знаю</label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">@item.QuestionSeventh</th>
+                        <td>
+                            <input type="radio" name="a7" id="a7" required>
+                            <label for="a7">Согласен</label>
+                        </td>
+                        <td>
+                            <input type="radio" name="a7" id="a8" required>
+                            <label for="a8">Не согласен</label>
+                        </td>
+                        <td>
+                            <input type="radio" name="a7" id="a9" required>
+                            <label for="a9">Не знаю</label>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </form>
     }
     @{
         if (Model.SecondPart.HasNextPage)
@@ -149,8 +151,7 @@
         }
         else
         {
-            <a 
-                asp-area="" 
+            <a asp-area="" 
                 asp-controller="" 
                 asp-action=""
                 asp-route-id="@Model.User.Id"
